@@ -1,44 +1,47 @@
 package ti4.commands.game;
 
-import java.util.Collection;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
 
+import net.dv8tion.jda.api.Permission;
 import net.dv8tion.jda.api.entities.Guild;
 import net.dv8tion.jda.api.entities.Member;
+import net.dv8tion.jda.api.entities.PermissionOverride;
 import net.dv8tion.jda.api.entities.Role;
 import net.dv8tion.jda.api.entities.User;
+import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
+import net.dv8tion.jda.api.entities.channel.concrete.ThreadChannel;
+import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.OptionData;
 import ti4.AsyncTI4DiscordBot;
+import ti4.commands.CommandHelper;
+import ti4.commands.GameStateSubcommand;
 import ti4.helpers.Constants;
 import ti4.helpers.FoWHelper;
 import ti4.helpers.Helper;
 import ti4.map.Game;
-import ti4.map.GameManager;
-import ti4.map.GameSaveLoadManager;
 import ti4.map.Player;
+import ti4.message.BotLogger;
 import ti4.message.MessageHelper;
+import ti4.service.milty.DraftDisplayService;
+import ti4.service.milty.MiltyDraftManager;
 
-public class Replace extends GameSubcommandData {
+class Replace extends GameStateSubcommand {
 
     public Replace() {
-        super(Constants.REPLACE, "Replace player in game");
-        addOptions(new OptionData(OptionType.USER, Constants.PLAYER, "Player being replaced @playerName").setRequired(false));
-        addOptions(new OptionData(OptionType.STRING, Constants.FACTION_COLOR, "Faction being replaced").setRequired(false).setAutoComplete(true));
-        addOptions(new OptionData(OptionType.USER, Constants.PLAYER2, "Replacement player @playerName").setRequired(false));
+        super(Constants.REPLACE, "Replace player in game", true, false);
+        addOptions(new OptionData(OptionType.STRING, Constants.PLAYER_FACTION, "Player being replaced").setAutoComplete(true).setRequired(true));
+        addOptions(new OptionData(OptionType.USER, Constants.PLAYER, "Replacement player @playerName"));
         addOptions(new OptionData(OptionType.STRING, Constants.GAME_NAME, "Game name").setAutoComplete(true));
     }
 
     @Override
     public void execute(SlashCommandInteractionEvent event) {
-        User callerUser = event.getUser();
-
-        Game game = getActiveGame();
-        Collection<Player> players = game.getPlayers().values();
         Member member = event.getMember();
         boolean isAdmin = false;
         if (member != null) {
@@ -50,107 +53,173 @@ public class Replace extends GameSubcommandData {
                 }
             }
         }
-        if (players.stream().noneMatch(player -> player.getUserID().equals(callerUser.getId())) && !isAdmin) {
+
+        Game game = getGame();
+        if (game.getPlayer(event.getUser().getId()) == null && !isAdmin) {
             MessageHelper.sendMessageToChannel(event.getChannel(), "Only game players or Bothelpers can replace a player.");
             return;
         }
 
-        OptionMapping removeOption = event.getOption(Constants.FACTION_COLOR);
-        OptionMapping removePlayerOption = event.getOption(Constants.PLAYER);
-        OptionMapping addOption = event.getOption(Constants.PLAYER2);
-        if ((removeOption == null && removePlayerOption == null) || addOption == null) {
-            MessageHelper.replyToMessage(event, "Specify player to remove and replacement");
+        Player replacedPlayer = CommandHelper.getPlayerFromReplaceEvent(game, event);
+        if (replacedPlayer == null) {
+            MessageHelper.replyToMessage(event, "Could not find the player to replace. Please try again, and if the problem persists contact `@Bothelper`.");
             return;
         }
 
-        Player removedPlayer = Helper.getPlayer(game, null, event);
-        if (removedPlayer == null || (removePlayerOption == null && removedPlayer.getFaction() == null)) {
-            MessageHelper.replyToMessage(event, "Could not find faction/color to replace");
-            return;
-        }
-        String removedPlayerID = removedPlayer.getUserID();
-
-        boolean isNullFaction = removedPlayer.getFaction() == null || removedPlayer.getFaction().equals("null");
-        if (removePlayerOption == null && isNullFaction) {
-            MessageHelper.replyToMessage(event, "Cannot determine player if they are not set up. Specify `player` option instead.");
+        OptionMapping replacementPlayerOption = event.getOption(Constants.PLAYER);
+        if (replacementPlayerOption == null) {
+            MessageHelper.replyToMessage(event, "Specify player to be replaced.");
             return;
         }
 
-        User addedUser = addOption.getAsUser();
-        boolean notRealPlayer = players.stream().noneMatch(player -> player.getUserID().equals(addedUser.getId()));
-        if (!notRealPlayer) {
-            if (game.getPlayer(addedUser.getId()).getFaction() == null) {
-                game.removePlayer(addedUser.getId());
-            }
+        User replacementUser = replacementPlayerOption.getAsUser();
+        Player possibleSpectatorToRemove = game.getPlayer(replacementUser.getId());
+        if (possibleSpectatorToRemove != null && possibleSpectatorToRemove.getFaction() != null && !possibleSpectatorToRemove.getFaction().equalsIgnoreCase("null")) {
+            MessageHelper.replyToMessage(event, "Specify player that is **__not__** in the game to be the replacement");
+            return;
+        } else if (possibleSpectatorToRemove != null) {
+            game.removePlayer(possibleSpectatorToRemove.getUserID());
+        }
+
+        Guild guild = game.getGuild();
+        Member newMember = guild.getMemberById(replacementUser.getId());
+        if (newMember == null) {
+            MessageHelper.replyToMessage(event, "Added player must be on the game's server.");
+            return;
         }
 
         //REMOVE ROLE
-        Guild guild = game.getGuild();
-        Member removedMember = guild.getMemberById(removedPlayer.getUserID());
+        Member oldMember = guild.getMemberById(replacedPlayer.getUserID());
         List<Role> roles = guild.getRolesByName(game.getName(), true);
-        if (removedMember != null && roles.size() == 1) {
-            guild.removeRoleFromMember(removedMember, roles.get(0)).queue();
+        if (oldMember != null && roles.size() == 1) {
+            guild.removeRoleFromMember(oldMember, roles.getFirst()).queue();
         }
 
         //ADD ROLE
-        Member addedMember = guild.getMemberById(addedUser.getId());
         if (roles.size() == 1) {
-            guild.addRoleToMember(addedMember, roles.get(0)).queue();
+            guild.addRoleToMember(newMember, roles.getFirst()).queue();
         }
 
-        String message;
-        if (players.stream().noneMatch(player -> player.getUserID().equals(removedPlayer.getUserID())) || players.stream().anyMatch(player -> player.getUserID().equals(addedUser.getId()))) {
-            MessageHelper.replyToMessage(event, "Specify player that is in game to be removed and player that is not in game to be replacement");
-            return;
-        }
-
-        message = "Game: " + game.getName() + "  Player: " + removedPlayer.getUserName() + " replaced by player: " + addedUser.getName();
-        Player player = game.getPlayer(removedPlayer.getUserID());
-        boolean speaker = player.isSpeaker();
         Map<String, List<String>> scoredPublicObjectives = game.getScoredPublicObjectives();
         for (Map.Entry<String, List<String>> poEntry : scoredPublicObjectives.entrySet()) {
             List<String> value = poEntry.getValue();
-            boolean removed = value.remove(removedPlayer.getUserID());
+            boolean removed = value.remove(replacedPlayer.getUserID());
             if (removed) {
-                value.add(addedUser.getId());
+                value.add(replacementUser.getId());
             }
         }
 
-        player.setUserName(addedUser.getName());
-        player.setUserID(addedUser.getId());
-        player.setTotalTurnTime(0);
-        player.setNumberTurns(0);
-        if (removedPlayer.getUserID().equals(game.getSpeaker())) {
-            game.setSpeaker(addedUser.getId());
+        String oldPlayerUserId = replacedPlayer.getUserID();
+        String oldPlayerUserName = replacedPlayer.getUserName();
+        replacedPlayer.setUserID(replacementUser.getId());
+        replacedPlayer.setUserName(replacementUser.getName());
+        replacedPlayer.setTotalTurnTime(0);
+        replacedPlayer.setNumberOfTurns(0);
+        replacedPlayer.removeTeamMateID(oldPlayerUserId);
+        if (oldPlayerUserId.equals(game.getSpeakerUserID())) {
+            game.setSpeakerUserID(replacementUser.getId());
         }
-        if (removedPlayer.getUserID().equals(game.getActivePlayerID())) {
+        if (oldPlayerUserId.equals(game.getActivePlayerID())) {
             // do not update stats for this action
-            game.setActivePlayerID(addedUser.getId());
+            game.setActivePlayerID(replacementUser.getId());
+        }
+        Map<String, Player> playersById = game.getPlayers();
+        Map<String, Player> updatedPlayersById = new LinkedHashMap<>();
+        for (String userId : playersById.keySet()) {
+            if (userId.equalsIgnoreCase(oldPlayerUserId)) {
+                updatedPlayersById.put(replacedPlayer.getUserID(), replacedPlayer);
+            } else {
+                updatedPlayersById.put(userId, playersById.get(userId));
+            }
+        }
+        game.setPlayers(updatedPlayersById);
+
+        //UPDATE FOW PERMISSIONS
+        if (game.isFowMode()) {
+            long permission = Permission.MESSAGE_MANAGE.getRawValue() | Permission.VIEW_CHANNEL.getRawValue();
+            TextChannel privateChannel = (TextChannel) replacedPlayer.getPrivateChannel();
+
+            PermissionOverride oldOverride = privateChannel.getMemberPermissionOverrides().stream()
+                .filter(override -> override.getMember().equals(oldMember)).findFirst().orElse(null);
+            if (oldOverride != null) {
+                oldOverride.delete().queue();
+            }
+
+            //Update private channel
+            if (oldMember != null) {
+                String newPrivateChannelName = privateChannel.getName().replace(getNormalizedName(oldMember), getNormalizedName(newMember));
+                privateChannel.getManager().setName(newPrivateChannelName).queue();
+            }
+            privateChannel.getManager().putMemberPermissionOverride(newMember.getIdLong(), permission, 0)
+                .queue(success -> accessMessage(privateChannel, newMember));
+
+            //Update Cards Info
+            ThreadChannel cardsInfo = replacedPlayer.getCardsInfoThread();
+            if (cardsInfo != null) {
+                String newCardsInfoName = cardsInfo.getName().replace(oldPlayerUserName.replace("/", ""), replacedPlayer.getUserName().replace("/", ""));
+                cardsInfo.getManager().setName(newCardsInfoName).queue();
+                if (oldMember != null) {
+                    cardsInfo.removeThreadMember(oldMember).queue();
+                }
+                cardsInfo.addThreadMember(newMember).queue(success -> accessMessage(cardsInfo, newMember));
+            }
+
+            //Update private threads
+            if (oldMember != null) {
+                game.getMainGameChannel().getThreadChannels().forEach(thread -> updateThread(thread, oldMember, newMember));
+
+                game.getMainGameChannel().retrieveArchivedPrivateThreadChannels().queue(archivedThreads -> archivedThreads.forEach(thread -> updateThread(thread, oldMember, newMember)));
+            }
         }
 
         Helper.fixGameChannelPermissions(event.getGuild(), game);
-        if (game.getBotMapUpdatesThread() != null) {
-            game.getBotMapUpdatesThread().addThreadMember(addedMember).queueAfter(5, TimeUnit.SECONDS);
+        ThreadChannel mapThread = game.getBotMapUpdatesThread();
+        if (mapThread != null && !mapThread.isLocked()) {
+            mapThread.getManager().setArchived(false).queue(success -> mapThread.addThreadMember(newMember).queueAfter(5, TimeUnit.SECONDS), BotLogger::catchRestError);
         }
-        game.getMiltyDraftManager().replacePlayer(game, removedPlayerID, player.getUserID());
 
-        if (speaker) {
-            game.setSpeaker(player.getUserID());
-        }
-        GameSaveLoadManager.saveMap(game, event);
-        GameSaveLoadManager.reload(game);
+        game.getMiltyDraftManager().replacePlayer(oldPlayerUserId, replacedPlayer.getUserID());
 
-        // Load the new game instance so that we can repost the milty draft
-        game = GameManager.getInstance().getGame(game.getName());
         if (game.getMiltyDraftManager().getDraftIndex() < game.getMiltyDraftManager().getDraftOrder().size()) {
-            game.getMiltyDraftManager().repostDraftInformation(game);
+            MiltyDraftManager manager = game.getMiltyDraftManager();
+            DraftDisplayService.repostDraftInformation(event, manager, game);
         }
 
+        String message = "Game: " + game.getName() + "  Player: " + oldPlayerUserId + " replaced by player: " + replacementUser.getName();
         if (FoWHelper.isPrivateGame(game)) {
             MessageHelper.sendMessageToChannel(event.getChannel(), message);
         } else {
             MessageHelper.sendMessageToChannel(game.getActionsChannel(), message);
         }
+    }
 
+    private void updateThread(ThreadChannel thread, Member oldMember, Member newMember) {
+        thread.retrieveThreadMemberById(oldMember.getId()).queue(
+            oldThreadMember -> thread.getManager().setArchived(false).queue(success -> {
+                thread.removeThreadMember(oldMember).queue(success2 -> {
+                    thread.addThreadMember(newMember).queue(success3 -> {
+                        accessMessage(thread, newMember);
+                    });
+                });
+            }),
+            failure -> { /* Old member is not in the thread -> Do nothing */ });
+    }
+
+    private void accessMessage(MessageChannel channel, Member member) {
+        MessageHelper.sendMessageToChannel(channel,
+            "Access to " + channel.getName() + " granted for " + member.getAsMention());
+    }
+
+    private String getNormalizedName(Member member) {
+        String name = member.getNickname();
+        if (name == null) {
+            name = member.getEffectiveName();
+        }
+        name = name.toLowerCase()
+            .replaceAll("[\\s]+", "-")
+            .replaceAll("[^a-z0-9-]", "")
+            .replaceAll("-{2,}", "-")
+            .replaceAll("^-|-$", "");
+        return name;
     }
 }
