@@ -1,10 +1,8 @@
 package ti4.commands.help;
 
-import java.awt.BasicStroke;
-import java.awt.Color;
-import java.awt.Font;
-import java.awt.Graphics;
+import java.awt.*;
 import java.awt.image.BufferedImage;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -14,17 +12,21 @@ import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEve
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.OptionData;
-import net.dv8tion.jda.api.utils.FileUpload;
 import ti4.ResourceHelper;
-import ti4.generator.MapGenerator;
-import ti4.generator.Mapper;
+import ti4.commands.Subcommand;
 import ti4.helpers.Constants;
-import ti4.helpers.ImageHelper;
 import ti4.helpers.Storage;
+import ti4.image.DrawingUtil;
+import ti4.image.ImageHelper;
+import ti4.image.MapGenerator;
+import ti4.image.Mapper;
+import ti4.message.BotLogger;
 import ti4.message.MessageHelper;
 import ti4.model.ColorModel;
+import ti4.service.image.FileUploadService;
 
-public class SampleColors extends HelpSubcommandData {
+class SampleColors extends Subcommand {
+
     public SampleColors() {
         super(Constants.SAMPLE_COLORS, "Show a sample image of dreadnoughts in various player colors.");
         addOptions(new OptionData(OptionType.STRING, Constants.HUE, "General hue of colors to show (default: all)").setAutoComplete(true));
@@ -39,14 +41,14 @@ public class SampleColors extends HelpSubcommandData {
         int LINEHEIGHT = 12;
         Font bigFont = Storage.getFont12();
         Font smallFont = Storage.getFont8();
-        int PAGEWIDTH = 1280;
-        int PAGEHIGHT = 1655;
+        int PAGEWIDTH = 1600;
+        int PAGEHIGHT = 2400;
         BasicStroke stroke = new BasicStroke(2.0f);
 
         OptionMapping input = event.getOption(Constants.HUE);
-        List<String> hues = new ArrayList<String>();
-        if (input == null || input.getAsString().equals("ALL") || input.getAsString().equals("")) {
-            hues = Arrays.asList(new String[] { "RED", "GRAY", "ORANGE", "YELLOW", "GREEN", "BLUE", "PURPLE", "PINK" });
+        List<String> hues = new ArrayList<>();
+        if (input == null || input.getAsString().equals(Constants.ALL) || input.getAsString().isEmpty()) {
+            hues = Arrays.asList("RED", "GRAY", "ORANGE", "YELLOW", "GREEN", "BLUE", "PURPLE", "PINK", "MULTI1", "MULTI2");
         } else {
             SPACING = 12;
             DREADWIDTH = 77 + 2 * SPACING;
@@ -55,15 +57,22 @@ public class SampleColors extends HelpSubcommandData {
             LINEHEIGHT = 20;
             bigFont = Storage.getFont16();
             smallFont = Storage.getFont12();
-            hues.add(input.getAsString());
+            if (input.getAsString().equals("MULTI"))
+            {
+                hues = Arrays.asList("MULTI1", "MULTI2");
+            }
+            else
+            {
+                hues.add(input.getAsString());
+            }
             stroke = new BasicStroke(3.0f);
         }
 
-        int left = ThreadLocalRandom.current().nextInt(PAGEWIDTH - 5 * DREADWIDTH);
+        int left = ThreadLocalRandom.current().nextInt(PAGEWIDTH - 6 * DREADWIDTH);
         int top = ThreadLocalRandom.current().nextInt(PAGEHIGHT - 2 * hues.size() * DREADTEXHIGHT);
         int right = left;
         int bottom = top + 2 * hues.size() * DREADTEXHIGHT;
-        int x = left;
+        int x;
         int y = top;
 
         BufferedImage coloursImage = new BufferedImage(PAGEWIDTH, PAGEHIGHT, BufferedImage.TYPE_INT_ARGB);
@@ -82,11 +91,11 @@ public class SampleColors extends HelpSubcommandData {
                 BufferedImage dread = ImageHelper.read(ResourceHelper.getInstance().getUnitFile(alias + "_dn.png"));
                 graphic.drawImage(dread, x + SPACING, y + SPACING, null);
                 graphic.setFont(bigFont);
-                MapGenerator.superDrawString(graphic, c.getName(), x + DREADWIDTH / 2, y + DREADSUBHIGHT + SPACING,
+                DrawingUtil.superDrawString(graphic, c.getName(), x + DREADWIDTH / 2, y + DREADSUBHIGHT + SPACING,
                     Color.WHITE, MapGenerator.HorizontalAlign.Center, MapGenerator.VerticalAlign.Top,
                     stroke, Color.BLACK);
                 graphic.setFont(smallFont);
-                MapGenerator.superDrawString(graphic, alias, x + DREADWIDTH / 2, y + DREADSUBHIGHT + LINEHEIGHT + SPACING,
+                DrawingUtil.superDrawString(graphic, alias, x + DREADWIDTH / 2, y + DREADSUBHIGHT + LINEHEIGHT + SPACING,
                     Color.WHITE, MapGenerator.HorizontalAlign.Center, MapGenerator.VerticalAlign.Top,
                     stroke, Color.BLACK);
 
@@ -95,11 +104,11 @@ public class SampleColors extends HelpSubcommandData {
                     dread = ImageHelper.read(file);
                     graphic.drawImage(dread, x + SPACING, y + SPACING + DREADTEXHIGHT, null);
                     graphic.setFont(bigFont);
-                    MapGenerator.superDrawString(graphic, (alias.equals("lgy") ? "orca" : "split" + c.getName()), x + DREADWIDTH / 2, y + DREADTEXHIGHT + DREADSUBHIGHT + SPACING,
+                    DrawingUtil.superDrawString(graphic, (alias.equals("lgy") ? "orca" : "split" + c.getName()), x + DREADWIDTH / 2, y + DREADTEXHIGHT + DREADSUBHIGHT + SPACING,
                         Color.WHITE, MapGenerator.HorizontalAlign.Center, MapGenerator.VerticalAlign.Top,
                         stroke, Color.BLACK);
                     graphic.setFont(smallFont);
-                    MapGenerator.superDrawString(graphic, (alias.equals("lgy") ? "orca" : "split" + alias), x + DREADWIDTH / 2, y + DREADTEXHIGHT + DREADSUBHIGHT + LINEHEIGHT + SPACING,
+                    DrawingUtil.superDrawString(graphic, (alias.equals("lgy") ? "orca" : "split" + alias), x + DREADWIDTH / 2, y + DREADTEXHIGHT + DREADSUBHIGHT + LINEHEIGHT + SPACING,
                         Color.WHITE, MapGenerator.HorizontalAlign.Center, MapGenerator.VerticalAlign.Top,
                         stroke, Color.BLACK);
                 }
@@ -114,8 +123,12 @@ public class SampleColors extends HelpSubcommandData {
             return;
         }
         coloursImage = coloursImage.getSubimage(left, top, right - left, bottom - top);
-        FileUpload fileUpload = MapGenerator.uploadToDiscord(coloursImage, 1.0f, "colour_sample_" + top + "_" + left + "_" + (hues.size() == 1 ? hues.get(0) : "ALL"))
-            .setDescription("Colour samples for " + (hues.size() == 1 ? "all the " + hues.get(0) : "ALL the") + " units.");
-        MessageHelper.sendFileUploadToChannel(event.getChannel(), fileUpload);
+        String fileNamePrefix = "colour_sample_" + top + "_" + left + "_" + (hues.size() == 1 ? hues.getFirst() : Constants.ALL);
+        try (var fileUpload = FileUploadService.createFileUpload(coloursImage, fileNamePrefix)) {
+            fileUpload.setDescription("Colour samples for " + (hues.size() == 1 ? "all the " + hues.getFirst() : "ALL the") + " units.");
+            MessageHelper.sendFileUploadToChannel(event.getChannel(), fileUpload);
+        } catch (IOException e) {
+            BotLogger.error(new BotLogger.LogMessageOrigin(event), "Exception when closing FileUpload.", e);
+        }
     }
 }
