@@ -2,12 +2,17 @@ package ti4.draft.items;
 
 import java.util.ArrayList;
 import java.util.List;
+
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import ti4.draft.DraftItem;
-import ti4.generator.Mapper;
-import ti4.generator.TileHelper;
-import ti4.helpers.Emojis;
-import ti4.model.*;
+import ti4.image.Mapper;
+import ti4.image.TileHelper;
+import ti4.model.DraftErrataModel;
+import ti4.model.FactionModel;
+import ti4.model.PlanetModel;
+import ti4.model.TileModel;
+import ti4.service.emoji.FactionEmojis;
+import ti4.service.emoji.TI4Emoji;
 
 public class HomeSystemDraftItem extends DraftItem {
     public HomeSystemDraftItem(String itemId) {
@@ -27,7 +32,7 @@ public class HomeSystemDraftItem extends DraftItem {
             return "Delta Wormhole / Delta Wormhole, Creuss (4/2)";
         }
         FactionModel faction = Mapper.getFaction(ItemId);
-        TileModel tile = TileHelper.getTile(faction.getHomeSystem());
+        TileModel tile = TileHelper.getTileById(faction.getHomeSystem());
         StringBuilder sb = new StringBuilder();
         List<String> planetIds = tile.getPlanets();
         for (int i = 0; i < planetIds.size() - 1; i++) {
@@ -35,7 +40,7 @@ public class HomeSystemDraftItem extends DraftItem {
             sb.append(", ");
         }
 
-        buildPlanetString(Mapper.getPlanet(planetIds.get(planetIds.size() - 1)), sb);
+        buildPlanetString(Mapper.getPlanet(planetIds.getLast()), sb);
 
         return sb.toString();
     }
@@ -49,8 +54,8 @@ public class HomeSystemDraftItem extends DraftItem {
 
     @JsonIgnore
     @Override
-    public String getItemEmoji() {
-        return Emojis.getFactionIconFromDiscord(ItemId);
+    public TI4Emoji getItemEmoji() {
+        return FactionEmojis.getFactionIcon(ItemId);
     }
 
     public static List<DraftItem> buildAllDraftableItems(List<FactionModel> factions) {
@@ -62,7 +67,7 @@ public class HomeSystemDraftItem extends DraftItem {
     public static List<DraftItem> buildAllItems(List<FactionModel> factions) {
         List<DraftItem> allItems = new ArrayList<>();
         for (FactionModel faction : factions) {
-            allItems.add(DraftItem.Generate(Category.HOMESYSTEM, faction.getAlias()));
+            allItems.add(DraftItem.generate(Category.HOMESYSTEM, faction.getAlias()));
         }
         return allItems;
     }
