@@ -8,18 +8,21 @@ import net.dv8tion.jda.api.events.interaction.component.ButtonInteractionEvent;
 import net.dv8tion.jda.api.interactions.components.ActionRow;
 import net.dv8tion.jda.api.interactions.components.ItemComponent;
 import net.dv8tion.jda.api.interactions.components.buttons.Button;
-import ti4.commands.explore.ExploreFrontier;
-import ti4.commands.leaders.CommanderUnlockCheck;
+import ti4.listeners.annotations.ButtonHandler;
 import ti4.map.Game;
 import ti4.map.Player;
 import ti4.map.Tile;
 import ti4.message.MessageHelper;
+import ti4.service.emoji.ExploreEmojis;
+import ti4.service.explore.ExploreService;
+import ti4.service.leader.CommanderUnlockCheckService;
 
 public class ButtonHelperExplore {
 
+    @ButtonHandler("exploreFront_")
     public static void exploreFront(Game game, Player player, ButtonInteractionEvent event, String buttonID) {
         String pos = buttonID.replace("exploreFront_", "");
-        new ExploreFrontier().expFront(event, game.getTileByPosition(pos), game, player);
+        ExploreService.expFront(event, game.getTileByPosition(pos), game, player);
         List<ActionRow> actionRow2 = new ArrayList<>();
         String exhaustedMessage = event.getMessage().getContentRaw();
         for (ActionRow row : event.getMessage().getActionRows()) {
@@ -28,14 +31,14 @@ public class ButtonHelperExplore {
             if (buttonIndex > -1) {
                 buttonRow.remove(buttonIndex);
             }
-            if (buttonRow.size() > 0) {
+            if (!buttonRow.isEmpty()) {
                 actionRow2.add(ActionRow.of(buttonRow));
             }
         }
-        if (exhaustedMessage == null || "".equalsIgnoreCase(exhaustedMessage)) {
+        if ("".equalsIgnoreCase(exhaustedMessage)) {
             exhaustedMessage = "Explore";
         }
-        if (actionRow2.size() > 0) {
+        if (!actionRow2.isEmpty()) {
             event.getMessage().editMessage(exhaustedMessage).setComponents(actionRow2).queue();
         } else {
             ButtonHelper.deleteMessage(event);
@@ -43,6 +46,7 @@ public class ButtonHelperExplore {
 
     }
 
+    @ButtonHandler("freelancersBuild_")
     public static void freelancersBuild(Game game, Player player, ButtonInteractionEvent event, String buttonID) {
         String planet = buttonID.replace("freelancersBuild_", "");
         List<Button> buttons;
@@ -50,15 +54,14 @@ public class ButtonHelperExplore {
         if (tile == null) {
             tile = game.getTileByPosition(planet);
         }
-        buttons = Helper.getPlaceUnitButtons(event, player, game, tile, "freelancers",
-            "placeOneNDone_dontskipfreelancers");
-        String message = player.getRepresentation() + " Use the buttons to produce 1 unit. "
-            + ButtonHelper.getListOfStuffAvailableToSpend(player, game);
+        buttons = Helper.getPlaceUnitButtons(event, player, game, tile, "freelancers", "placeOneNDone_dontskipfreelancers");
+        String message = player.getRepresentation() + " Use the buttons to produce 1 unit. " + ButtonHelper.getListOfStuffAvailableToSpend(player, game);
         MessageHelper.sendMessageToChannelWithButtons(event.getChannel(), message, buttons);
         ButtonHelper.deleteMessage(event);
 
     }
 
+    @ButtonHandler("purge_Frags_")
     public static void purgeFrags(Game game, Player player, ButtonInteractionEvent event, String buttonID) {
         String typeNAmount = buttonID.replace("purge_Frags_", "");
         String type = typeNAmount.split("_")[0];
@@ -74,27 +77,48 @@ public class ButtonHelperExplore {
             ButtonHelper.deleteTheOneButton(event);
         }
         while (fragmentsToPurge.size() > count) {
-            fragmentsToPurge.remove(0);
+            fragmentsToPurge.removeFirst();
         }
 
-        for (String fragid : fragmentsToPurge) {
+        StringBuilder message = new StringBuilder(player.getRepresentation() + " purged");
+        if (fragmentsToPurge.size() == 1) {
+            String fragid = fragmentsToPurge.getFirst();
             player.removeFragment(fragid);
             game.setNumberOfPurgedFragments(game.getNumberOfPurgedFragments() + 1);
+            switch (fragid)
+            {
+                case "crf1", "crf2", "crf3", "crf4", "crf5", "crf6", "crf7", "crf8", "crf9" -> message.append(" a " + ExploreEmojis.CFrag + "cultural");
+                case "hrf1", "hrf2", "hrf3", "hrf4", "hrf5", "hrf6", "hrf7" ->  message.append(" a " + ExploreEmojis.HFrag + "hazardous");
+                case "irf1", "irf2", "irf3", "irf4", "irf5" ->  message.append(" an " + ExploreEmojis.IFrag + "industrial");
+                case "urf1", "urf2", "urf3" ->  message.append(" an " + ExploreEmojis.UFrag + "unknown");
+                default ->  message.append(" ").append(fragid);
+            }
+            message.append(" relic fragment.");
+        } else {
+            for (String fragid : fragmentsToPurge) {
+                player.removeFragment(fragid);
+                game.setNumberOfPurgedFragments(game.getNumberOfPurgedFragments() + 1);
+                switch (fragid)
+                {
+                    case "crf1", "crf2", "crf3", "crf4", "crf5", "crf6", "crf7", "crf8", "crf9" -> message.append(ExploreEmojis.CFrag);
+                    case "hrf1", "hrf2", "hrf3", "hrf4", "hrf5", "hrf6", "hrf7" ->  message.append(ExploreEmojis.HFrag);
+                    case "irf1", "irf2", "irf3", "irf4", "irf5" ->  message.append(ExploreEmojis.IFrag);
+                    case "urf1", "urf2", "urf3" ->  message.append(ExploreEmojis.UFrag);
+                    default ->  message.append(" ").append(fragid);
+                }
+            }
+            message.append(" relic fragments.");
         }
-
-        CommanderUnlockCheck.checkAllPlayersInGame(game, "lanefir");
-
-        String message = player.getRepresentation() + " purged fragments: "
-            + fragmentsToPurge;
-        MessageHelper.sendMessageToChannel(event.getMessageChannel(), message);
+        CommanderUnlockCheckService.checkAllPlayersInGame(game, "lanefir");
+        MessageHelper.sendMessageToChannel(event.getMessageChannel(), message.toString());
         if (!game.isFowMode() && event.getMessageChannel() instanceof ThreadChannel) {
-            MessageHelper.sendMessageToChannel(player.getCorrectChannel(), message);
+            MessageHelper.sendMessageToChannel(player.getCorrectChannel(), message.toString());
         }
 
         if (player.hasTech("dslaner")) {
             player.setAtsCount(player.getAtsCount() + 1);
             MessageHelper.sendMessageToChannel(event.getMessageChannel(),
-                player.getRepresentation() + " Put 1 commodity on ATS Armaments");
+                player.getRepresentation() + " put 1 commodity on _ATS Armaments_.");
         }
 
     }
