@@ -1,11 +1,8 @@
 package ti4.map;
 
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonIgnore;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonTypeName;
 import java.awt.Point;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
@@ -13,12 +10,22 @@ import java.util.Optional;
 import java.util.Set;
 
 import org.apache.commons.lang3.StringUtils;
-import ti4.generator.Mapper;
+import static org.apache.commons.lang3.StringUtils.isNotBlank;
+import org.jetbrains.annotations.Nullable;
+
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+
 import ti4.helpers.Constants;
 import ti4.helpers.Helper;
-import ti4.helpers.Units.UnitKey;
+import ti4.image.Mapper;
 import ti4.model.AttachmentModel;
 import ti4.model.PlanetModel;
+import ti4.model.PlanetTypeModel;
+import ti4.model.TechSpecialtyModel;
+import ti4.model.TechnologyModel.TechnologyType;
 import ti4.model.UnitModel;
 
 @JsonTypeName("planet")
@@ -28,14 +35,14 @@ public class Planet extends UnitHolder {
     private int influenceOriginal;
     private int resourcesModifier;
     private int influenceModifier;
-    private String originalPlanetType = "";
-    private String originalTechSpeciality = "";
+    private String originalPlanetType;
+    private String originalTechSpeciality;
     private final List<String> planetType = new ArrayList<>();
     private final List<String> techSpeciality = new ArrayList<>();
     private boolean hasAbility;
     private int spaceCannonHitsOn;
     private int spaceCannonDieCount;
-    private String contrastColor = "";
+    private String contrastColor;
 
     @JsonCreator
     public Planet(@JsonProperty("name") String name, @JsonProperty("holderCenterPosition") Point holderCenterPosition) {
@@ -43,19 +50,19 @@ public class Planet extends UnitHolder {
         PlanetModel planetInfo = Mapper.getPlanet(name);
         if (Optional.ofNullable(planetInfo).isPresent()) {
             if (planetInfo.getPlanetTypes() != null) {
-                planetType.addAll(planetInfo.getPlanetTypes().stream().map(x -> x.toString()).toList());
+                planetType.addAll(planetInfo.getPlanetTypes().stream().map(PlanetTypeModel.PlanetType::toString).toList());
             }
-            if (planetInfo.getPlanetType() == null && planetInfo.getPlanetTypes() != null && planetInfo.getPlanetTypes().size() > 0) {
-                originalPlanetType = planetInfo.getPlanetTypes().get(0).toString();
+            if (planetInfo.getPlanetType() == null && planetInfo.getPlanetTypes() != null && !planetInfo.getPlanetTypes().isEmpty()) {
+                originalPlanetType = planetInfo.getPlanetTypes().getFirst().toString();
             } else if (planetInfo.getPlanetType() != null) {
                 originalPlanetType = planetInfo.getPlanetType().toString();
             }
             if (planetInfo.getContrastColor() != null) {
                 contrastColor = planetInfo.getContrastColor();
             }
-            if (Optional.ofNullable(planetInfo.getTechSpecialties()).orElse(new ArrayList<>()).size() > 0) {
-                originalTechSpeciality = planetInfo.getTechSpecialties().get(0).toString();
-                techSpeciality.addAll(planetInfo.getTechSpecialties().stream().map(x -> x.toString()).toList());
+            if (!Optional.ofNullable(planetInfo.getTechSpecialties()).orElse(new ArrayList<>()).isEmpty()) {
+                originalTechSpeciality = planetInfo.getTechSpecialties().getFirst().toString();
+                techSpeciality.addAll(planetInfo.getTechSpecialties().stream().map(TechSpecialtyModel.TechSpecialty::toString).toList());
             }
             if (!StringUtils.isBlank(planetInfo.getLegendaryAbilityName()))
                 hasAbility = true;
@@ -107,12 +114,17 @@ public class Planet extends UnitHolder {
         }).toList();
     }
 
-    @JsonIgnore
     public boolean hasGroundForces(Player player) {
         return getUnits().keySet().stream()
-            .map(UnitKey::asyncID)
-            .map(unitID -> player.getPriorityUnitByAsyncID(unitID, this))
+            .filter(player::unitBelongsToPlayer)
+            .map(uk -> player.getPriorityUnitByAsyncID(uk.asyncID(), this))
             .filter(Objects::nonNull)
+            .anyMatch(UnitModel::getIsGroundForce);
+    }
+
+    public boolean hasGroundForces(Game game) {
+        return getUnits().keySet().stream()
+            .flatMap(uk -> game.getPriorityUnitByUnitKey(uk, this).stream())
             .anyMatch(UnitModel::getIsGroundForce);
     }
 
@@ -139,10 +151,8 @@ public class Planet extends UnitHolder {
             resourcesOriginal = 2;
             influenceOriginal = 0;
         }
-
         AttachmentModel attachment = Mapper.getAttachmentInfo(tokenFileName);
         if (attachment != null) {
-
             resourcesModifier += attachment.getResourcesModifier();
             influenceModifier += attachment.getInfluenceModifier();
             for (String planetType : attachment.getPlanetTypes()) {
@@ -192,6 +202,11 @@ public class Planet extends UnitHolder {
     }
 
     @JsonIgnore
+    public int getMaxResInf() {
+        return Math.max(getResources(), getInfluence());
+    }
+
+    @JsonIgnore
     public int getOptimalResources() {
         if (getResources() > getInfluence()) {
             return getResources();
@@ -223,10 +238,12 @@ public class Planet extends UnitHolder {
         return getResources() + getInfluence();
     }
 
+    @Nullable
     public String getOriginalPlanetType() {
         return originalPlanetType;
     }
 
+    @Nullable
     public String getOriginalTechSpeciality() {
         return originalTechSpeciality;
     }
@@ -236,13 +253,18 @@ public class Planet extends UnitHolder {
     }
 
     @JsonIgnore
+    public PlanetModel getPlanetModel() {
+        return Mapper.getPlanet(getName());
+    }
+
+    @JsonIgnore
     public Set<String> getPlanetTypes() {
-        Set<String> types = new HashSet<String>();
+        Set<String> types = new HashSet<>();
         List<String> three = List.of("hazardous", "cultural", "industrial");
         for (String type : planetType) {
             if (three.contains(type)) types.add(type);
         }
-        if (three.contains(originalPlanetType)) types.add(originalPlanetType);
+        if (isNotBlank(originalPlanetType) && three.contains(originalPlanetType)) types.add(originalPlanetType);
         return types;
     }
 
@@ -251,12 +273,20 @@ public class Planet extends UnitHolder {
     }
 
     @JsonIgnore
+    public boolean hasTechSpecialty(TechnologyType type) {
+        return techSpeciality.contains(type.toString().toLowerCase())
+            || techSpeciality.contains(type.toString().toUpperCase());
+    }
+
+    @JsonIgnore
     public Set<String> getTechSpecialities() {
         Set<String> specialties = new HashSet<>();
-        if (originalTechSpeciality != null && !originalTechSpeciality.isEmpty()) {
+        if (isNotBlank(originalTechSpeciality)) {
             specialties.add(originalTechSpeciality);
         }
         specialties.addAll(techSpeciality);
+        specialties.removeAll(Collections.singleton(null));
+        specialties.removeAll(Collections.singleton(""));
         return specialties;
     }
 
@@ -266,6 +296,9 @@ public class Planet extends UnitHolder {
 
     @JsonIgnore
     public boolean isLegendary() {
+        PlanetModel model = getPlanetModel();
+        if (model.isLegendary()) return true;
+
         for (String token : tokenList) {
             AttachmentModel attachment = Mapper.getAttachmentInfo(token);
             if (attachment == null)
@@ -274,6 +307,18 @@ public class Planet extends UnitHolder {
                 return true;
         }
         return hasAbility;
+    }
+
+    @JsonIgnore
+    public boolean isHomePlanet() {
+        return getPlanetModel().getFactionHomeworld() != null;
+    }
+
+    @JsonIgnore
+    public boolean isHomePlanet(Game game) {
+        Tile t = game.getTileFromPlanet(getName());
+        if (t != null) return t.isHomeSystem(game);
+        return false;
     }
 
     public int getSpaceCannonDieCount() {
