@@ -21,19 +21,18 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.ObjectWriter;
 import com.fasterxml.jackson.databind.SerializationFeature;
-
-import ti4.commands.tokens.AddToken;
-import ti4.generator.Mapper;
+import ti4.commands.tokens.AddTokenCommand;
 import ti4.helpers.AliasHandler;
 import ti4.helpers.Constants;
 import ti4.helpers.Helper;
 import ti4.helpers.Storage;
 import ti4.helpers.Units.UnitKey;
+import ti4.image.Mapper;
 import ti4.map.Game;
-import ti4.map.GameSaveLoadManager;
 import ti4.map.Player;
 import ti4.map.Tile;
 import ti4.map.UnitHolder;
+import ti4.map.manage.GameManager;
 import ti4.message.BotLogger;
 
 public class ConvertTTPGtoAsync {
@@ -103,7 +102,7 @@ public class ConvertTTPGtoAsync {
 
     public static final Map<String, String> fakePlayers = new HashMap<>() {
         {
-            put(Constants.prisonerOneID, "PrisonerOne");
+            put(Constants.prisonerOneId, "PrisonerOne");
             put(Constants.tspId, "Holytispoon");
             put("947763140517560331", "TI4 Game Management");
             put("235148962103951360", "Carl-bot");
@@ -143,14 +142,13 @@ public class ConvertTTPGtoAsync {
             File file = Storage.getTTPGExportStorage(filename);
             TTPGMap ttpgMap = getTTPGMapFromJsonFile(file);
             if (ttpgMap == null) {
-                BotLogger.log("TTPG Import Failed:\n> filename: " + filename + " is not valid TTPG export JSON format");
+                BotLogger.warning("TTPG Import Failed:\n> filename: " + filename + " is not valid TTPG export JSON format");
                 return false;
             }
             Game game = ConvertTTPGMaptoAsyncMap(ttpgMap, gamename);
-            GameSaveLoadManager.saveMap(game, "Imported from TTPG");
-            GameSaveLoadManager.loadMaps();
+            GameManager.save(game, "Imported from TTPG");
         } catch (Exception e) {
-            BotLogger.log("TTPG Import Failed: " + gamename + "    filename: " + filename, e);
+            BotLogger.error("TTPG Import Failed: " + gamename + "    filename: " + filename, e);
             return false;
         }
         return true;
@@ -160,7 +158,7 @@ public class ConvertTTPGtoAsync {
         Mapper.init();
         Game asyncGame = new Game() {
             {
-                setOwnerID(Constants.prisonerOneID);
+                setOwnerID(Constants.prisonerOneId);
                 setOwnerName("PrisonerOne");
                 setPlayerCountForMap(ttpgMap.getPlayers().size());
                 setVp(ttpgMap.getScoreboard());
@@ -211,7 +209,7 @@ public class ConvertTTPGtoAsync {
             TTPGPlayer ttpgPlayer = ttpgMap.getPlayers().get(index);
 
             //PLAYER STATS
-            asyncPlayer.setFaction(AliasHandler.resolveFaction(ttpgPlayer.getFactionShort().toLowerCase()));
+            asyncPlayer.setFaction(asyncGame, AliasHandler.resolveFaction(ttpgPlayer.getFactionShort().toLowerCase()));
             asyncPlayer.setColor(AliasHandler.resolveColor(ttpgPlayer.getColorActual().toLowerCase()));
             asyncPlayer.setCommodities(ttpgPlayer.getCommodities());
             asyncPlayer.setCommoditiesTotal(ttpgPlayer.getMaxCommodities());
@@ -222,11 +220,11 @@ public class ConvertTTPGtoAsync {
 
             //PLAYER STRATEGY CARDS
             if (!ttpgPlayer.getStrategyCards().isEmpty()) {
-                String ttpgSC = (String) ttpgPlayer.getStrategyCards().get(0);
+                String ttpgSC = (String) ttpgPlayer.getStrategyCards().getFirst();
                 if (Objects.nonNull(ttpgSC)) asyncPlayer.addSC(Helper.getSCNumber(ttpgSC));
             }
             if (!ttpgPlayer.getStrategyCardsFaceDown().isEmpty()) {
-                String ttpgSCplayed = (String) ttpgPlayer.getStrategyCardsFaceDown().get(0);
+                String ttpgSCplayed = (String) ttpgPlayer.getStrategyCardsFaceDown().getFirst();
                 if (Objects.nonNull(ttpgSCplayed)) asyncGame.setSCPlayed(Helper.getSCNumber(ttpgSCplayed), true);
             }
 
@@ -261,13 +259,13 @@ public class ConvertTTPGtoAsync {
             for (String ttpgLaw : ttpgPlayer.getLaws()) {
                 String asyncLaw = AliasHandler.resolveAgenda(ttpgLaw);
                 electedPlayers.put(asyncLaw, asyncPlayer.getFaction());
-                if ("warrant".equals(asyncLaw)) asyncPlayer.setSearchWarrant();
+                if ("warrant".equals(asyncLaw)) asyncPlayer.flipSearchWarrant();
             }
 
             //PLAYER SUPPORT FOR THE THRONE
             for (String objective : ttpgPlayer.getObjectives()) {
                 if (objective.startsWith("Support for the Throne")) {
-                    asyncPlayer.setPromissoryNotesInPlayArea(AliasHandler.resolvePromissory(objective));
+                    asyncPlayer.addPromissoryNoteToPlayArea(AliasHandler.resolvePromissory(objective));
                 }
             }
 
@@ -355,7 +353,7 @@ public class ConvertTTPGtoAsync {
 
             //PLAYER ALLIANCES
             for (String alliance : ttpgPlayer.getAlliances()) {
-                asyncPlayer.setPromissoryNotesInPlayArea(AliasHandler.resolvePromissory(alliance + "_an"));
+                asyncPlayer.addPromissoryNoteToPlayArea(AliasHandler.resolvePromissory(alliance + "_an"));
             }
 
             //INDEX
@@ -370,7 +368,7 @@ public class ConvertTTPGtoAsync {
         String[] hexSummary = ttpgMap.getHexSummary().split(",");
         for (String hex : hexSummary) {
             System.out.println("Hex: " + hex);
-            if (hex.length() > 0) {
+            if (!hex.isEmpty()) {
                 Tile tile = ConvertTTPGHexToAsyncTile(asyncGame, hex);
                 if (tile != null) {
                     asyncGame.setTile(tile);
@@ -591,10 +589,6 @@ public class ConvertTTPGtoAsync {
             case "17" -> { //DeltaWH
                 //TODO: move Creuss if exists in tileList - i.e. if 17 is near BL, put 51 in BL
             }
-            case "54" -> { //Cabal, add S11 cabal prison nearby - i.e. if 54 is near BR, put S11 in BR
-                Tile prison = new Tile("s11", "br"); //hardcode bottom right for now
-                asyncGame.setTile(prison);
-            }
         }
 
         if (asyncPosition == null) {
@@ -654,7 +648,6 @@ public class ConvertTTPGtoAsync {
                         if (Constants.MIRAGE.equalsIgnoreCase(attachmentResolved)) {
                             Helper.addMirageToTile(tile);
                             tile.addToken(tokenFileName, Constants.SPACE);
-                            // asyncMap.clearPlanetsCache();
                         }
                     } else {
                         System.out.println("                character not recognized:  " + attachment);
@@ -683,7 +676,7 @@ public class ConvertTTPGtoAsync {
                     regionCount = Integer.valueOf(str);
 
                 } else if (Character.isLowerCase(chr) && validUnits.contains(str)) { // is a unit, control_token, or CC
-                    if (!"".equals(color)) { //color hasn't shown up yet, so probably just tokens in space, skip unit crap
+                    if (!color.isEmpty()) { //color hasn't shown up yet, so probably just tokens in space, skip unit crap
                         if ("t".equals(str)) { //CC
                             tile.addCC(Mapper.getCCID(color));
                         } else if ("o".equals(str)) { //control_token
@@ -708,7 +701,7 @@ public class ConvertTTPGtoAsync {
                     if ("e".equals(str)) { //frontier token
                         System.out.println("attempt to add frontier token to " + tile.getPosition());
                         // tile.addToken(Mapper.getTokenPath(Constants.FRONTIER), Constants.SPACE);
-                        AddToken.addToken(null, tile, Constants.FRONTIER, null);
+                        AddTokenCommand.addToken(null, tile, Constants.FRONTIER, null);
                     }
                 } else {
                     System.out.println("                character not recognized:  " + str);
